@@ -290,6 +290,9 @@ Release 2.7.2 - UNRELEASED
     HDFS-8209. Support different number of datanode directories in MiniDFSCluster.
     (surendra singh lilhore via vinayakumarb)
 
+    HDFS-9294. DFSClient deadlock when close file and failed to renew lease.
+    (Brahma Reddy Battula via szetszwo)
+
 Release 2.7.1 - 2015-07-06
 
   INCOMPATIBLE CHANGES
